--- a/skyfolk/static/css/listado_busqueda.css
+++ b/skyfolk/static/css/listado_busqueda.css
@@ -56,7 +56,7 @@
   left: 0px;
   max-width: 200px;
   text-align: center;
-  
+
 }
 .informacion li {
   display: list-item;
@@ -107,7 +107,7 @@
 }
 .fa-plus:hover {
   color: #246068;
-  
+
 }
 .fa-heart:hover {
   color: tomato;
@@ -177,7 +177,7 @@
   height:34px;
   width:70px;
 }
-.btn{ 
+.btn{
    cursor: pointer;
 }
 .container {
@@ -251,11 +251,11 @@
 
 @media only screen and (min-width: 641px) and (max-width: 959px) {
   .field {
-    width: 831px; } 
+    width: 831px; }
   }
 @media only screen and (max-width: 640px) {
     .field {
-    width: 631px; }  
+    width: 631px; }
   }
 @media only screen and (max-width: 640px) {
   .field {
@@ -423,7 +423,15 @@
   margin-top: 7px;
   margin-left: 5px;
 }
+ #toggle .menup-2 li {
+  padding: 7px;
+  margin-top: 0px;
+  margin-botton: 0px;
+ }
+.#toggle .menup-2 {
+ box-shadow: 0;
 
+}
 .box-tool-2 {
   width: 100%;
   height: 40px;
@@ -470,10 +478,16 @@
   width: 480px;
   height: 600px;
   margin: auto;
-  top: 100px;
-  left: 40%;
+  top: 140px;
+  right: 0;
+  margin-right: 60px;
 }
-
+#id_searchText {
+  border-bottom: none;
+}
+.box-tool-2 li:hover {
+  background: transparent;
+}
 @media only screen and (min-width: 641px) and (max-width: 959px) {
   .crear-grupo {
     left: 20%;
