--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -303,6 +303,7 @@
       <div class="video-player card">
 
         <div class="vbox">
+            <div class="col-sm-5 col-md-12 col-lg-12">
             <div class="user-video">
                 <button class="play-user-video"><span class="fontawesome-play"></span></button>
             </div>
@@ -326,6 +327,7 @@
             </div>
             <div class="user-video">
                 <button class="play-user-video"><span class="fontawesome-play"></span></button>
+            </div>
             </div>
             <!--
           <div class="thumbnail"></div>
@@ -557,14 +559,16 @@
       </div>
 
 
-      <div class="col-lg-12">
-
-        <div class="weather card">
+      <div class="col-lg-12 col-sm-6 col-md-5">
+        <!-- <div class="weather card"> -->
+      <div class="widget-right-down">
           <div class="current">
+              <div class="col-sm-3 col-md-4 col-lg-10">
               <div class="follower-card">
                   <span class="follower-title"><i >Sugerencias</i></span>
-            {% for item in friends_top12 %}
-                  <div class="follower-sug">
+
+                  {% for item in friends_top12 %}
+                 <div class="follower-sug">
                       {% if item.user__profile__image and item.user__profile__image|file_exists %}
                       <img  class="sug-user" src="{{MEDIA_URL}}{{item.user__profile__image}}">
                       <span class="name-sug">
@@ -578,8 +582,10 @@
                      <button class="add-sug"><i class="fa fa-plus"></i></button>
                       </span>
 					 {% endif %}
+                      </div>
+                    {% endfor %}
                   </div>
-           {% endfor %}
+
               </div>
               <!-- WIDGET DEL TIEMPO
             <div class="icon"><span class="fontawesome-cloud"></span></div>
@@ -600,8 +606,8 @@
         </div>
       </div>
 -->
-    </div>
-
+   <!-- </div> -->
+          </div>
   </div>
 <!--</div>-->
 
