--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -223,6 +223,81 @@
                     </div>
                 </div>
                 </div>
+
+                <!-- Trofeos -->
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                  <div class="trofeos">
+                     <span id="close-trofeos" class="fa fa-close fa-2x"></span>
+                      <h3 class="trofeos-title">Logros de {{ user_profile.username }}</h3>
+                      <div class="wrapper-trofeos">
+                          <div class="col-sm-1 col-md-1 col-lg-1">
+                            <span class="trofeo-desb"><img src="https://cdn4.iconfinder.com/data/icons/ballicons-2-free/100/pencil-128.png" title="¡Primer comentario!" alt="¡Primer comentario!"></span>
+                          </div>
+                          <div class="col-sm-1 col-md-1 col-lg-1">
+                            <span class="trofeo-desb"><img src="https://cdn4.iconfinder.com/data/icons/ballicons-2-free/100/heart-128.png" title="1 me gusta" alt="1 me gusta"></span>
+                          </div>
+                        <div class="col-sm-1 col-md-1 col-lg-1">
+                            <span class="trofeo-desb"><img src="https://cdn2.iconfinder.com/data/icons/ballicons-2-free/100/bowling-128.png" title="Jugador avanzado" alt="Jugador avanzado"></span>
+                          </div>  
+                      </div>
+                  </div>
+                </div>
+
+                <!-- Grupos -->
+
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                  <div class="grupos">
+                     <span id="close-grupos" class="fa fa-close fa-2x"></span>
+                      <h3 class="grupos-title">Grupos de {{ user_profile.username }}</h3>
+                      <div class="wrapper-grupos">
+                          <div class="grupo-user">
+                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" title"img-group" alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                          </div>
+                          <div class="grupo-user">
+                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" title"img-group" alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                          </div>
+                          <div class="grupo-user">
+                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" title"img-group" alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                          </div>
+                          <div class="grupo-user">
+                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" title"img-group" alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                          </div>
+                          <div class="grupo-user">
+                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" title"img-group" alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                          </div>
+                          <div class="grupo-user">
+                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" title"img-group" alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                          </div>
+                          <div class="grupo-user">
+                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" title"img-group" alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                          </div>
+                          <div class="grupo-user">
+                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" title"img-group" alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                          </div>
+                          <div class="grupo-user">
+                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" title"img-group" alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                          </div>
+                          <div class="grupo-user">
+                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" title"img-group" alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                          </div>
+                          <div class="grupo-user">
+                              <img src="http://images.forwallpaper.com/files/thumbs/preview/77/779217__wallpaper-sports-extreme-style-skydiving_p.jpg" title"img-group" alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                          </div>
+                      </div>
+
+                  </div>
+                </div>
           <header>
             <!--
             <h1>Adrian Subname</h1>
