--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -595,6 +595,7 @@
                       <textarea placeholder="Escribe tu mensaje..."></textarea>
                        <div class="botones_ampliado">
                        <button class="enviar_ampliado"><i class="fa fa-paper-plane"></i>Enviar</button>
+                       <button class="cerrar_ampliado"><i class="fa fa-close"></i>Cerrar</button>
                        <button class="localizacion_ampliado"><i class="fa fa-map-marker"></i></button>
                        <button class="foto_ampliado"><i class="fa fa-camera"></i></button>
                        </div>
