--- a/skyfolk/static/css/colorbox.css
+++ b/skyfolk/static/css/colorbox.css
@@ -93,7 +93,8 @@
 }
 section {
   position: relative;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   border: 1px solid transparent;
   min-height: 80%;
@@ -104,7 +105,7 @@ section {
   padding: 10px 10px;
   z-index: 9999;
 }
-div.photo img {
+.photo img {
   width: 210px;
   height: 200px;
   margin: auto;
@@ -124,8 +125,11 @@ section li {
   list-style-type: none;
   display: inline-block;
   position: relative;
+  margin-right: 7px;
+  margin-bottom: 7px;
+  margin-top: 7px;
 }
-span.text {
+.text {
   opacity: 0;
   position: absolute;
   z-index: 2;
@@ -133,10 +137,9 @@ span.text {
   -webkit-transition: opacity 0.2s;
   background-color: rgba(31, 31, 31, 0.5);
   width: 100%;
-  height: 90%;
-  border-radius: 7px;
+  height: 100%;
 }
-span.text p {
+.text p {
   padding:0;
   position: relative;
   text-align: center;
@@ -148,7 +151,7 @@ span.text p {
   font-family: 'Open Sans', sans-serif;
   cursor: pointer;
 }
-span.text i {
+.text i {
   padding:0;
   margin:auto;
   position:absolute;
@@ -163,7 +166,7 @@ span.text i {
   font-style: normal;
   cursor:pointer;
 }
-span.text a {
+.text a {
   padding:0;
   margin:auto;
   position:absolute;
@@ -178,37 +181,35 @@ span.text a {
   font-style: normal;
   cursor: pointer;
 }
-div.photo:hover span  {
+.photo:hover span  {
   opacity:1;
 }
-div.photo:hover p {
-    margin-left: 0px;
+.photo:hover p {
+  margin-left: 0px;
 }
-div.photo:hover i {
+.photo:hover i {
   margin-top: 0px;
 }
-div.photo:hover a {
+.photo:hover a {
   margin-top: 0px;
 }
 
 /* Btn */
-fieldset {
-  border: transparent;
-  box-shadow: 0.2px 0.2px 0.2px greY;
+.controls {
   margin: 10px;
+  background-color: #fff;
   position: relative;
 }
-ul.btn {
+.btn {
   position: relative;
   display: inline;
   list-style-type: none;
   text-decoration: none;
 }
-ul.btn li button.all {
+.btn li .all {
   padding: 10px 10px 10px 10px;
   font-family: 'Open Sans', sans-serif;
   font-size: 200;
-  border-radius: 7px;
   border: 1px solid transparent;
   background:#33cccc;
   color: white;
@@ -217,11 +218,11 @@ ul.btn li button.all {
   cursor: pointer;
   transition: all .3s ease-in;
 }
-ul.btn li button.all:hover {
+.btn li .all:hover {
   color: #33cccc;
   background: #fff;
 }
-ul.btn li select {
+.btn li select {
   border: 1px solid transparent;
   padding: 10px 10px 10px 10px;
   font-family: 'Open Sans', sans-serif;
@@ -229,23 +230,21 @@ ul.btn li select {
   outline-color: white;
   background:#33cccc;
   color: white;
-  border-radius: 7px;
 }
-ul.btn li select:hover {
+.btn li select:hover {
   color: #33cccc;
   background: white;
 }
 
-ul.layout {
+.layout {
   position: relative;
   float: right;
   margin: auto;
 }
-button.fontawesome-reorder , button.fontawesome-table {
+.fontawesome-reorder , .fontawesome-table {
   padding: 10px 10px 10px 10px;
   font-family: 'Open Sans', sans-serif;
   font-size: 200;
-  border-radius: 7px;
   border: 1px solid transparent;
   background:#33cccc;
   color: white;
@@ -256,7 +255,7 @@ button.fontawesome-reorder , button.fontawesome-table {
   cursor: pointer;
   transition: all .3s ease-in;
 }
-ul.layout li button:hover {
+.layout li button:hover {
   color: #33cccc;
   background: white;
 }
