--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1009,7 +1009,7 @@ box-shadow:         0px 0px 1px 0px rgba(50, 50, 50, 0.75);
 
 html, body {
   font: 0.9em/1.2 "Proxima Nova", "Helvetica Neue", Arial;
-  background: #E4E4E4;
+  background: #eeeeee;
   color: #46494c;
   height: 100%;
   padding: 0;
