--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -628,11 +628,13 @@
                 </div>
 
 							  </article>
+                <div class="replay-actual-message">
+                  <div class="triangle-reply"></div>
+                  <textarea name="reply-textarea" rows="4" cols="50"></textarea>
+                </div>
 					  	</div>
 
 					{% endfor %}
-
-
 
 				</div>
 				<div id="tab-amigos">
