--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -321,8 +321,8 @@ input[type="checkbox"]:checked ~ .ampliado {
   display: block;
   margin-left: 15px;
   box-shadow: 7px 7px 0px rgba(0, 0, 0, 0.16);
-
 }
+
 /* Responder - Me gusta - Añadir */
 span[class*="entypo-forward"] {
   cursor:pointer;
@@ -643,4 +643,40 @@ a.fontawesome-cog:hover {
   transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -webkit-transition: all .3s ease-in-out;
+}
+
+.replay-actual-message {
+  width: 100%;
+  height: 100px;
+  background: #f5f5f5;
+  display: none;
+  border-top: 1px solid #eeeeee;
+  position: relative;
+  margin-top: 120px;
+}
+.replay-actual-message .triangle-reply {
+  width: 10px;
+  height: 10px;
+  background-color: #eeeeee;
+  border: 1px solid #eeeeee;
+  position: relative;
+  margin: auto;
+  -webkit-transform: rotate(45deg);
+  -moz-trasnform: rotate(45deg);
+  transform: rotate(45deg);
+  top: -5px;
+}
+.replay-actual-message textarea {
+  margin: auto;
+  position: relative;
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  padding-left: 6px;
+  padding-top: 3px;
+  border-style: none;
+  overflow: auto;
+  border: 1px solid #e0e0e0;
+  font-family: 'Open Sans', sans-serif;
+  resize: none;
 }
