--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -97,20 +97,19 @@ margin-top: -24px;
   left: 10px;
   cursor:pointer;
   border: 2px solid grey;
-  background-position: center;
   padding: 0 0;
   width:100px;
   height:100px;
   border-radius: 100%;
   overflow:hidden;
-  -webkit-transition:.5s;
-  -moz-transition:.5s;
-  -o-transition:.5s;
-  transition:.5s;
-  -webkit-box-shadow: 0px 0px 2.5px 0px rgba(0,0,0,0.15);
-  -moz-box-shadow: 0px 0px 2.5px 0px rgba(0,0,0,0.15);
-  box-shadow: 0px 0px 2.5px 0px rgba(0,0,0,0.15);
 }
+.usr-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  margin: auto;
+}
+
 .wrapper .box .zoom-pub {
   position: relative;
   width: 20px;
@@ -237,6 +236,7 @@ input[type="checkbox"] {
   text-align: center;
 
 }
+
 .ampliado .botones_ampliado .cerrar_ampliado {
   display: inline-block;
   border-radius: 3px;
