--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -78,7 +78,7 @@
             <div class="container">
             © 2015 Copyright
             <a class="blue-text text-darken-4 right" href="#!">More Links</a>
-            <a id="about" class="blue-text text-darken-4 right" href="#!">Sobre Skyfolk</a>
+            <a id="about" class="blue-text text-darken-4 right" href="/about">Sobre Skyfolk</a>
             </div>
           </div>
     </div>
