--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -326,6 +326,25 @@
 
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="stock card">
+        <!-- Widget encuestas -->
+         <div class="wrapper">
+            <div class="widget-wr">
+               <div class="widget-wr-ans">
+              <img src="http://www.telegraph.co.uk/travel/destination/article125984.ece/ALTERNATES/w620/bostonwaterfront.jpg">
+              <span class="wr-tittle">¿Debería viajar aquí?</span>
+            </div>
+             <div class="widget-options">
+                <button type="submit" class="fa fa-heart widget-ok"></button>
+               <button type="submit" class="fa fa-times widget-no"></button>
+               <span class="widget-result">
+                 <i class="widget-result-no">56</i>
+                 <i class="widget-result-ok">44</i>
+               </span>
+            </div>
+          </div>
+        </div>
+
+               <!-- WIDGET DE BOLSA 
           <div class="stock-chart">
             <div id="chart"></div>
           </div>
@@ -398,6 +417,7 @@
             <div class="col-lg-6 mobile-grid-50"><a><strong>18.3 M</strong><span>Shares traded</span></a></div>
             <div class="col-lg-6 mobile-grid-50"><a><strong>13.45 B</strong><span>Market cap</span></a></div>
           </div>
+          -->
         </div>
       </div>
     </div>
