--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1968,3 +1968,95 @@ float:left;
     display: none;
   }
 }
+
+/* WIDGET ENCUESTA */
+.stock .wrapper {
+  margin-top: 0;
+  height: 457px;
+}
+.wrapper .widget-wr {
+  background-color: #eeeeee;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: block;
+  margin: auto;
+  z-index: 2;
+}
+.wrapper .widget-wr img {
+  width: 99%;
+  height: 100%;
+  border: 2px solid #fff;
+}
+.wrapper .widget-wr .widget-wr-ans {
+  position: relative;
+  background-color: #f5f5f5;
+  width: 100%;
+  height: 80%;
+}
+.wrapper .widget-wr .wr-tittle {
+  font-family: 'Open Sans', sans-serif;
+  position: absolute;
+  display: block;
+  top: 80%;
+  font-size: 1.7em;
+  margin-left: 10px;
+  color: white;
+}
+.wrapper .widget-options {
+  position: relative;
+  margin-top: 0px;
+  width: 100%;
+  height: 30%;
+  background-color: #fff;
+}
+.wrapper .widget-options button {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 100%;
+  font-size: 1.4em;
+  color: #000;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+.wrapper .widget-options .widget-ok {
+  float: right;
+  margin-top: 5px;
+  margin-right: 15px;
+  border: 1px solid #c5e1a5;
+}
+.wrapper .widget-options .widget-ok:hover {
+  color: #c5e1a5;
+}
+
+.wrapper .widget-options .widget-no {
+  float: left;
+  margin-top: 5px;
+  margin-left: 15px;
+  border: 1px solid #ef9a9a;
+}
+.wrapper .widget-options .widget-no:hover{
+  color: #ef9a9a;
+}
+.wrapper .widget-options .widget-result {
+  display: inline-block;
+  position: relative;
+  margin-left: 27%;
+  margin-top: 20px;
+}
+.wrapper .widget-options i {
+  font-style: normal;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.4em;
+}
+.wrapper .widget-options .widget-result-ok {
+  color: #c5e1a5;
+}
+.wrapper .widget-options .widget-result-no {
+  color: #ef9a9a;
+}
