--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -833,23 +833,14 @@ body > .container {
   overflow-y: scroll;
   overflow-x: hidden;
 }
-.follower-title {
-  color: #000;
-  position: relative;
-  top: 7px;
-  padding: 0px 100px;
-  border-bottom: 1px solid #e0e0e0;
-  margin-left: 100px;
-  font-size: 1.5em;
-  font-weight: 100;
-}
 .follower-sug {
 
  display: inline-block;
  list-style-type: none;
  position: relative;
- width: 100%;
+ width: 97%;
  height: 50px;
+ padding: 0;
  margin-left: 10px;
  margin-top: 20px;
  background-color: #fff;
@@ -857,10 +848,52 @@ body > .container {
  border-top-left-radius: 25px;
  border-bottom-left-radius: 25px;
  z-index: 9999;
--webkit-box-shadow: 0px 0px 1px 0px rgba(50, 50, 50, 0.75);
--moz-box-shadow:    0px 0px 1px 0px rgba(50, 50, 50, 0.75);
-box-shadow:         0px 0px 1px 0px rgba(50, 50, 50, 0.75);
+ -webkit-box-shadow: 0px 0px 1px 0px rgba(50, 50, 50, 0.75);
+ -moz-box-shadow:    0px 0px 1px 0px rgba(50, 50, 50, 0.75);
+ box-shadow:         0px 0px 1px 0px rgba(50, 50, 50, 0.75);
+}
 
+.follower-tab {
+  position: relative;
+  height: 50px;
+  width: 100%;
+  margin: auto;
+  top: 0;
+}
+.follower-tab .follower-tab-personas {
+  display: inline-block;
+  width: 100px;
+  height: 30px;
+  border-bottom: 1px solid #eee;
+  margin-top: 7px;
+  margin-left: 29%;
+  margin-right: 7px;
+  color: #bdbdbd;
+  cursor: pointer;
+  text-align: center;
+  -webkit-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+  transition: all .3s linear;
+}
+.follower-tab .follower-tab-grupos {
+  display: inline-block;
+  width: 100px;
+  border-bottom: 1px solid #eee;
+  text-align: center;
+  cursor: pointer;
+  color: #bdbdbd;
+  height: 30px;
+  -webkit-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+  transition: all .3s linear;
+}
+.follower-tab .follower-tab-personas:hover {
+  color: #80deea;
+  border-bottom: 2px solid #80deea;
+}
+.follower-tab .follower-tab-grupos:hover {
+  color: #80deea;
+  border-bottom: 2px solid #80deea;
 }
 .sug-user {
  position: relative;
@@ -880,18 +913,31 @@ box-shadow:         0px 0px 1px 0px rgba(50, 50, 50, 0.75);
   margin-left: 30px;
   text-align: center;
 }
+.name-sug a:link {
+  color: #9e9e9e;
+  text-decoration: none;
+}
+.name-sug a:visited {
+  color: #9e9e9e;
+  text-decoration: none;
+}
+.name-sug a:hover {
+  color: #9e9e9e;
+  text-decoration: none;
+}
 .add-sug {
    width: 80px;
-   padding: 0px 0px 7px 0px;
-   height: 20px;
-   color: #7CE1FF;
-   background-color: #eeeeee;
+   padding: 0px 0px 0px 0px;
+   height: 30px;
+   color: #000;
+   background-color: #f5f5f5;
+   border: 1px solid #e0e0e0;
+   border-radius: 7px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 100;
    font-size: 1.025em;
    text-align: center;
    margin-left: 7px;
-   border: none;
    outline: none;
 }
 .add-sug i {
@@ -1727,6 +1773,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   margin-top: -100px;
   margin-left: -292px; /*150px*/
   resize: none;
+  z-index: 9999;
 
 }
 
