--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -96,7 +96,7 @@ margin-top: -24px;
   top: 10px;
   left: 10px;
   cursor:pointer;
-  border: 2px solid grey;
+  border: 2px solid #1e88e5;
   padding: 0 0;
   width:100px;
   height:100px;
