--- a/skyfolk/static/css/timeline.css
+++ b/skyfolk/static/css/timeline.css
@@ -43,7 +43,7 @@
 
 #section .wrapperx .line {
   left: 30px;
-  background-color: rgba(44,44,44,0.777);
+  background-color: #f5f5f5;
   box-shadow: 0.1px 0.1px grey;
   width: 10px;
   height: 200px;
@@ -64,7 +64,7 @@
 }
 
 #section .wrapperx .line .second .head {
-  background-color: rgba(44,44,44,1);
+  background-color: #1e88e5;
   width: 100%;
   height: 30px;
   font-family: 'Open Sans', sans-serif;
@@ -79,7 +79,7 @@
   float: left;
   width: 10px;
   height: 10px;
-  background-color: rgba(44,44,44,1);
+  background-color: #1e88e5;
   margin-top: 10px;
   left: -5px;
   position: absolute;
@@ -138,7 +138,7 @@
   background-position: center;
   background-color: #fff;
   border-radius: 100%;
-  border: 1px solid rgba(44,44,44,0.666);
+  border: 1px solid #1e88e5;
   position: absolute;
   display: inline-block;
   top: -7px;
